adicionar logica para copiar o resultado

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div id="resultContainer__result">
                 <p id="result"></p>
-                <input class="btn" type="button" value="Copiar" id="resultContainer__button__copy">
+                <input class="btn" type="button" value="Copiar" id="resultContainer__button__copy" onclick='copyElement(document.getElementById("result"))''>
             </div>
 
         </aside>
