alterar elemento do resultado p para textarea, melhorando a experiencia do usuario

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div id="resultContainer__result">
-                <p id="result"></p>
+                <textarea id="result"></textarea>
                 <input class="btn" type="button" value="Copiar" id="resultContainer__button__copy" onclick='copyElement(document.getElementById("result"))''>
             </div>
 
